--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1605,6 +1605,8 @@
     "vies-check-success": "Number '%vat-number%' is registered in VIES system",
     "view-api": "View API",
     "view-column-net-subtotal": "See subtotal or net column",
+    "view-estimation": "Ver presupuesto",
+    "view-order": "Ver pedido",
     "warehouse": "Warehouse",
     "warehouse-cant-be-same": "The origin and destination warehouse can not be the same.",
     "warehouse-must-be-same-business": "Warehouses must be from the same company",
