--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1605,6 +1605,8 @@
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Zutabean azpi-totala edo garbia ikusi",
+    "view-estimation": "Ver presupuesto",
+    "view-order": "Ver pedido",
     "warehouse": "Biltegia",
     "warehouse-cant-be-same": "Jatorrizko eta helmugako biltegiak ezin dira berdinak izan.",
     "warehouse-must-be-same-business": "Jatorri eta helburuko biltegiak enpresa berekoak izan behar dira",
