Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "aplicar automàticament a",
     "automatic": "Automàtic",
     "available": "Disponible",
+    "average": "Mitjana",
     "average-cost": "Preu mitjà",
     "average-purchase-price": "Preu mitjà de compra",
     "back": "Tornar",
@@ -1431,6 +1432,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Èxit",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les línies d'IVA ha de ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals de l'IVA de les línies d'IVA ha de ser: %lineTotalTax%",
     "summary": "Resum",
