--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Automatisch anwenden auf",
     "automatic": "Automático",
     "available": "Verfügbar",
+    "average": "Media",
     "average-cost": "Durchschnittskosten",
     "average-purchase-price": "Durchschnittlicher Kaufpreis",
     "back": "Volver",
@@ -1431,6 +1432,7 @@
     "subtotal": "subtotal",
     "subtract": "Subtract",
     "success": "success",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
     "sum-total-line-tax-must-be": "Die Summe der MwSt.-Summen der MwSt.-Zeilen sollte 0 sein.",
     "summary": "Summary",
