--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Automatically apply to",
     "automatic": "Automatic",
     "available": "Available",
+    "average": "Media",
     "average-cost": "Average cost",
     "average-purchase-price": "Average purchase price",
     "back": "Back",
@@ -1431,6 +1432,7 @@
     "subtotal": "Subtotal",
     "subtract": "Subtract",
     "success": "Success",
+    "sum": "Sum",
     "sum-netos-line-tax-must-be": "The sum of the net of the VAT lines should be: %lineNet%",
     "sum-total-line-tax-must-be": "The sum of the VAT totals of the VAT lines should be: %lineTotalTax%",
     "summary": "Summary",
