--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Automatikoki aplikatu honi",
     "automatic": "Automatikoa",
     "available": "Eskuragarri",
+    "average": "Media",
     "average-cost": "Batez besteko prezioa",
     "average-purchase-price": "Batez besteko erosketa-prezioa",
     "back": "Itzuli",
@@ -1431,6 +1432,7 @@
     "subtotal": "Subtotala",
     "subtract": "Kendu",
     "success": "Arrakasta",
+    "sum": "Batuketa",
     "sum-netos-line-tax-must-be": "BEZ lerroen neto-en batura %lineNet% izan beharko luke.",
     "sum-total-line-tax-must-be": "BEZ lerroen BEZ totalen batura hau izan behar du: %lineTotalTax%",
     "summary": "Laburpena",
