--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Appliquer automatiquement à",
     "automatic": "Automático",
     "available": "Disponible",
+    "average": "Media",
     "average-cost": "Coût moyen",
     "average-purchase-price": "Prix d'achat moyen",
     "back": "Retour",
@@ -1431,6 +1432,7 @@
     "subtotal": "Sous-total",
     "subtract": "Soustraire",
     "success": "Succès",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "La somme du net des lignes de TVA devrait être: %lineNet%",
     "sum-total-line-tax-must-be": "La somme des totaux de TVA des lignes de TVA devrait être: %lineTotalTax%",
     "summary": "Résumé",
