--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "auto-apply-to",
     "automatic": "Automático",
     "available": "A disposizione",
+    "average": "Metà",
     "average-cost": "Costo medio",
     "average-purchase-price": "average-purchase-price",
     "back": "Volver",
@@ -1431,6 +1432,7 @@
     "subtotal": "subtotal",
     "subtract": "Subtract",
     "success": "success",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
     "summary": "Summary",
