--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Aplicar automáticamente a",
     "automatic": "Automático",
     "available": "Disponible",
+    "average": "Media",
     "average-cost": "Precio medio",
     "average-purchase-price": "Precio medio de compra",
     "back": "Volver",
@@ -1431,6 +1432,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma de los totales de iva de las líneas de IVA debería ser: %lineTotalTax%",
     "summary": "Resumen",
