--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Aplicar automáticamente a",
     "automatic": "Automático",
     "available": "Dispoñible",
+    "average": "Media",
     "average-cost": "Prezo medio",
     "average-purchase-price": "Prezo medio de compra",
     "back": "Volver",
@@ -1431,6 +1432,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "A suma dos netos das liñas de IVE debe ser: %lineNet%",
     "sum-total-line-tax-must-be": "A suma dos totais de IVE das liñas de IVE debe ser: %lineTotalTax%",
     "summary": "Resumo",
