--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Automaticamente aplicar a",
     "automatic": "Automático",
     "available": "acessível",
+    "average": "Media",
     "average-cost": "Custo médio",
     "average-purchase-price": "average-purchase-price",
     "back": "Costas",
@@ -1431,6 +1432,7 @@
     "subtotal": "subtotal",
     "subtract": "Tirar do estoque",
     "success": "success",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
     "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
     "summary": "Summary",
