--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -133,6 +133,7 @@
     "auto-apply-to": "Aplica automàticament a",
     "automatic": "Automatic",
     "available": "Disponible",
+    "average": "Media",
     "average-cost": "Cost mig",
     "average-purchase-price": "Preu mitjà de compra",
     "back": "Tornar arrere",
@@ -1431,6 +1432,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "success",
+    "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les llínees del IVA deuria ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals del IVA de les llínees del IVA ha de ser: %lineTotalTax%",
     "summary": "Resum",
