- Ahora mostramos advertencia cuando se desactivan huecos en las secuencias de facturas para España. - También mostramos todos los mensajes de advertencia y errores incluso cuando el documento de compra o venta se guarda correctamente.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "geladen am",
     "url": "Webseite",
     "use-gaps": "Lücken nutzen",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Benutzer",
     "user-and-config": "Usuario y configuración",
     "users": "Benutzer",
