--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Subido en",
     "url": "Dirección web",
     "use-gaps": "Usar huecos",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Usuario",
     "user-and-config": "Usuario y configuración",
     "users": "Usuarios",
