--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Hemen kargatua",
     "url": "Webgunea",
     "use-gaps": "Hutsuneak erabili",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Erabiltzailea",
     "user-and-config": "Usuario y configuración",
     "users": "Erabiltzaileak",
