--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Téléversé vers",
     "url": "Site Internet",
     "use-gaps": "Utiliser les écarts",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Utilisateur",
     "user-and-config": "Usuario y configuración",
     "users": "utilisateurs",
