--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Pujat en",
     "url": "Lloc web",
     "use-gaps": "Usar buits",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Usuari",
     "user-and-config": "Usuari i configuració",
     "users": "Usuaris",
