--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Uploaded at",
     "url": "Web site",
     "use-gaps": "Use gaps",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "User",
     "user-and-config": "User and configuration",
     "users": "Users",
