--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Cargado en",
     "url": "Sitio web",
     "use-gaps": "Usar ocos",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Usuario",
     "user-and-config": "Usuario e configuración",
     "users": "Usuarios",
