--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Uploaded at",
     "url": "Sito web",
     "use-gaps": "use-gaps",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "utente",
     "user-and-config": "Usuario y configuración",
     "users": "utenti",
