--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1575,6 +1575,7 @@
     "uploaded-at": "Uploaded at",
     "url": "Local na rede Internet",
     "use-gaps": "use-gaps",
+    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Do utilizador",
     "user-and-config": "Usuario y configuración",
     "users": "Comercial",
