Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -93,7 +93,7 @@
     "amount-without-discount": "Amount without discount",
     "and": "and",
     "any": "Any",
-    "any-group": "Cualquier grupo",
+    "any-group": "Any group",
     "apache-module-not-found": "Apache module not found: %module%",
     "apc-clear": "APC cleared.",
     "apc-delete-key-item": "Deleted element '%item%' from APC.",
@@ -133,7 +133,7 @@
     "auto-apply-to": "Automatically apply to",
     "automatic": "Automatic",
     "available": "Available",
-    "average": "Media",
+    "average": "Average",
     "average-cost": "Average cost",
     "average-purchase-price": "Average purchase price",
     "back": "Back",
@@ -181,7 +181,7 @@
     "cancel": "Cancel",
     "cancel-data": "Cancel changes or operation",
     "cancelled": "Cancelled",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Error generating %invoice% invoice entry",
     "cant-assign-date-already-regularized": "You can't assign the date %date% because there is already a regularization of %tax% for that period.",
     "cant-assing-subaccount-supplier": "Unable to associate subaccount for provider %supplierCode%",
     "cant-associate-customer-subaccount": "Unable to associate subaccount for client %customerCode%",
@@ -201,7 +201,7 @@
     "cant-delete-default-tax": "Can't delete default tax",
     "cant-delete-default-warehouse": "Can't delete default warehouse",
     "cant-delete-last-user": "You can't delete the last user",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "Product or variant %reference% cannot be deleted because it has already been purchased or sold. But you can block it if you want.",
     "cant-load-controller": "Can't load controller '%controllerName%'.",
     "cant-modify-reference": "Cann't edit reference.",
     "cant-remove-accounting-entry": "Can't remove accounting entry",
@@ -1575,7 +1575,7 @@
     "uploaded-at": "Uploaded at",
     "url": "Web site",
     "use-gaps": "Use gaps",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "If you uncheck the use of gaps in invoices and delete some, the gap will remain in the billing and you will have problems with the treasury",
     "user": "User",
     "user-and-config": "User and configuration",
     "users": "Users",
