--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -452,7 +452,7 @@
     "disable": "disattivare",
     "disable-plugins": "Desactivar plugins",
     "disabled": "Disabilitato",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Plugin disabilitati",
     "discharge-date": "Data di scarico: 0",
     "discount": "Sconto",
     "display": "Visualizza",
@@ -1151,7 +1151,7 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "Punti",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Punti di interesse",
     "port": "Puerto",
     "position": "Posizione",
     "positive-balance": "positive-balance",
@@ -1486,7 +1486,7 @@
     "tax-transport": "Trasporto fiscale",
     "taxes": "Le tasse",
     "telemetry-data-to-send": "telemetry-data-to-send",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Prefisso telefonico",
     "template": "Modello",
     "template-error": "template-error",
     "template-not-found": "Modello non trovato",
@@ -1656,6 +1656,6 @@
     "you-should-change-passwd": "È consigliabile cambiare la password",
     "your": "Il tuo",
     "zip-code": "Cap",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Codici postali",
     "zip-error-wrong-structure": "La struttura del file ZIP è incorretta. Può contenere solamente la cartella del plugin e solamente un plugin."
 }
