--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1575,7 +1575,7 @@
     "uploaded-at": "Cargado en",
     "url": "Sitio web",
     "use-gaps": "Usar ocos",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Se desmarcas o uso de ocos en facturas e eliminas algunha quedarase o oco na facturación e terás problemas con facenda",
     "user": "Usuario",
     "user-and-config": "Usuario e configuración",
     "users": "Usuarios",
