Añadida información de consumo de memoria al cron.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -217,6 +217,7 @@
     "center": "Centre",
     "change": "Canviar",
     "channel": "Canal",
+    "charge-date": "Data càrrec",
     "chart": "Gràfic",
     "charts": "Gràfiques",
     "chat": "Xat",
