--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -217,6 +217,7 @@
     "center": "Centro",
     "change": "Cambiar",
     "channel": "Canal",
+    "charge-date": "Fecha cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
     "chat": "Chat",
