--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -217,6 +217,7 @@
     "center": "Mitte",
     "change": "Veränderung",
     "channel": "Kanal",
+    "charge-date": "Belastungsdatum",
     "chart": "Grafik",
     "charts": "Grafiken",
     "chat": "Chat",
