--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -217,6 +217,7 @@
     "center": "Center",
     "change": "Change",
     "channel": "Channel",
+    "charge-date": "Charge date",
     "chart": "Chart",
     "charts": "Charts",
     "chat": "Chat",
