--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -217,6 +217,7 @@
     "center": "Centro",
     "change": "Cambiar.",
     "channel": "Canal.",
+    "charge-date": "Fecha cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
     "chat": "Chat",
@@ -616,7 +617,7 @@
     "filters": "Filtros",
     "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
-    "finished-cron": "Terminada la ejecución del cron. Tiempo consumido: %timeNeeded%",
+    "finished-cron": "Terminada la ejecución del cron. Tiempo consumido: %timeNeeded% segundos, Memoria: %memoryUsed% MB.",
     "first-quarter": "1º trimestre",
     "first-steps": "Primeros pasos",
     "first-trimester": "Primer trimestre",
