--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -217,6 +217,7 @@
     "center": "Erdian",
     "change": "Aldatu",
     "channel": "Kanala",
+    "charge-date": "Kobratzeko data",
     "chart": "Grafikoa",
     "charts": "Irudikapenak",
     "chat": "Chat",
