--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -217,6 +217,7 @@
     "center": "Centre",
     "change": "Changer",
     "channel": "canal",
+    "charge-date": "Date de facturation",
     "chart": "Graphique",
     "charts": "Graphiques",
     "chat": "Chat",
