--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -217,6 +217,7 @@
     "center": "Centro",
     "change": "Cambiar",
     "channel": "Canal",
+    "charge-date": "Data cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
     "chat": "Chat",
