--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -217,6 +217,7 @@
     "center": "Center",
     "change": "mudança",
     "channel": "channel",
+    "charge-date": "Fecha cargo",
     "chart": "Chart",
     "charts": "charts",
     "chat": "Chat",
