--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -217,6 +217,7 @@
     "center": "Centre",
     "change": "Canviar",
     "channel": "Canal",
+    "charge-date": "Data de càrrec",
     "chart": "Gràfic",
     "charts": "Gràfiques",
     "chat": "Chat",
