Solucionado bug al llamar a CodeModel.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -617,7 +617,7 @@
     "filters": "Filtros",
     "finalize": "rematar",
     "find-problems": "Atopar problemas",
-    "finished-cron": "Terminada a execución do cron. Tempo consumido: %timeNeeded%",
+    "finished-cron": "Rematada a execución do cron. Tempo consumido: %timeNeeded%",
     "first-quarter": "Primeiro trimestre",
     "first-steps": "Primeiros pasos",
     "first-trimester": "Primeiro trimestre",
