--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -518,7 +518,7 @@
     "enable-api": "Attiva API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "Abilitato",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Plugin attivi",
     "encrypt": "Crittazione",
     "end-date": "Data di fine",
     "end-time": "end-time",
