Añadido mensaje de aviso cuando se intenta eliminar una factura que tiene ya una rectificativa.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "No es pot carregar el controlador '%controllerName%'.",
     "cant-modify-reference": "Impossible modificar la referència.",
     "cant-remove-accounting-entry": "No es pot eliminar l'assentament",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "No es pot eliminar el rebut",
     "cant-update-audit-log": "No es pot modificar un registre d'auditoria",
     "card": "Targeta",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "Eliminar l'assentament d'obertura",
     "delete-record": "Eliminar el registre",
+    "Deleted": "Eliminat",
     "deleted-model": "Eliminat %model% (%key%) %desc%",
     "delivery-note": "Albarà",
     "delivery-note-email-subject": "El seu albarà %code%",
