--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "Controller kann nicht geladen werden.",
     "cant-modify-reference": "Kann keine Referenz bearbeiten.",
     "cant-remove-accounting-entry": "Buchung kann nicht gelöscht werden",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "Beleg kann nicht gelöscht werden",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Karte",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "Öffnungsbuchung löschen",
     "delete-record": "Datensatz entfernen",
+    "Deleted": "Eliminado",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Frachtbrief",
     "delivery-note-email-subject": "Ihr Lieferschein %code%",
