--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "Can't load controller '%controllerName%'.",
     "cant-modify-reference": "Cann't edit reference.",
     "cant-remove-accounting-entry": "Can't remove accounting entry",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "Can't remove the receipt",
     "cant-update-audit-log": "Cannot modify an audit record",
     "card": "Card",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "Remove account opening entry",
     "delete-record": "Remove record",
+    "Deleted": "Deleted",
     "deleted-model": "Deleted %model% (%key%) %desc%",
     "delivery-note": "Delivery note",
     "delivery-note-email-subject": "Your delivery note %code%",
