--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "No se puede cargar el controlador '%controllerName%'.",
     "cant-modify-reference": "Imposible modificar la referencia.",
     "cant-remove-accounting-entry": "No se puede eliminar el asiento",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "No se puede eliminar el recibo",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Tarjeta",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "Eliminar el asiento de apertura",
     "delete-record": "Eliminar registro",
+    "Deleted": "Eliminado",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Remisión",
     "delivery-note-email-subject": "Su albarán %code%",
