--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "Ezin da  '%controllerName%' kontroladorea kargatu.",
     "cant-modify-reference": "Ezin da erreferentzia aldatu.",
     "cant-remove-accounting-entry": "Ezin da idazpena ezabatu",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "Ezin da ordainagiria ezabatu",
     "cant-update-audit-log": "Ezin da aldatu auditoria-erregistro bat",
     "card": "Txartela",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "Irekitze idazpena ezabatu",
     "delete-record": "Erregistroa ezabatu",
+    "Deleted": "Eliminado",
     "deleted-model": "Ezabatuta %model% (%key%) %desc%",
     "delivery-note": "Albarana",
     "delivery-note-email-subject": "Zure %code%. albarana",
