--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "Impossible de charger le contrôleur '%controllerName%'.",
     "cant-modify-reference": "Impossible d'éditer la référence.",
     "cant-remove-accounting-entry": "L'entrée comptable ne peut être supprimée",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "Le reçu ne peut être retiré",
     "cant-update-audit-log": "Un enregistrement d'audit ne peut être modifié",
     "card": "Carte",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "Supprimer l'entrée d'ouverture de compte",
     "delete-record": "Supprimer l'enregistrement",
+    "Deleted": "Eliminado",
     "deleted-model": "%model% (%key%) %desc% supprimé",
     "delivery-note": "récépissé",
     "delivery-note-email-subject": "Votre bon de livraison %code%",
