--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "Non se pode cargar o controlador  '%controllerName%'.",
     "cant-modify-reference": "Non se pode editar a referencia.",
     "cant-remove-accounting-entry": "Non se pode eliminar o asento",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "Non se pode eliminar o recibo",
     "cant-update-audit-log": "Non se pode modificar un rexistro de auditoría",
     "card": "Tarxeta",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "Eliminar o asento de apertura",
     "delete-record": "Eliminar rexistro",
+    "Deleted": "Eliminado",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Albarán",
     "delivery-note-email-subject": "O seu albará %code%",
