--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "Impossibile caricare il controller.",
     "cant-modify-reference": "Non modificare il riferimento.",
     "cant-remove-accounting-entry": "cant-remove-accounting-entry",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "cant-remove-receipt",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Carta",
@@ -414,6 +415,7 @@
     "delete-logs": "Cancella dati di navigazione",
     "delete-opening": "delete-opening",
     "delete-record": "Rimuovi record",
+    "Deleted": "Rimosso",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "lista dei passeggeri",
     "delivery-note-email-subject": "delivery-note-email-subject",
