--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -205,6 +205,7 @@
     "cant-load-controller": "Não é possível carregar o controlador.",
     "cant-modify-reference": "Não pode editar a referência.",
     "cant-remove-accounting-entry": "cant-remove-accounting-entry",
+    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
     "cant-remove-receipt": "cant-remove-receipt",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Cartão",
@@ -414,6 +415,7 @@
     "delete-logs": "Eliminar historial",
     "delete-opening": "delete-opening",
     "delete-record": "Remover registro",
+    "Deleted": "Eliminado",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Nota de entrega",
     "delivery-note-email-subject": "A sua nota de entrega %code%",
