Añadidos procesos al cron para eliminar logs y eventos de trabajos antiguos, hasta la fecha indicada en el panel de control.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Kopfzeilen Datum  der Buchung",
     "day": "day",
     "days": "Tage",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Tage bis Ablauf",
     "db-host": "Dades Datenbankserver",
     "db-name": "Name Datenbank",
@@ -1265,6 +1266,7 @@
     "reloading": "Neuladen",
     "remove-filter": "Filter löschen",
     "remove-from-list": "Löschen",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Erneuern",
     "renumber": "Renumerar",
     "renumber-accounting": "Buchungen neu nummerieren",
