--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Date indicated in the head of the accounting entry",
     "day": "Day",
     "days": "Days",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Days until expiration",
     "db-host": "Database Server",
     "db-name": "Database name",
@@ -1265,6 +1266,7 @@
     "reloading": "Reloading...",
     "remove-filter": "Remove filter",
     "remove-from-list": "Remove",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renew",
     "renumber": "Renumber",
     "renumber-accounting": "Renumber Accounting",
