--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Fecha indicada en la cabecera del asiento contable",
     "day": "Día",
     "days": "Dias",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Días hasta vencimiento",
     "db-host": "Host base de datos",
     "db-name": "Nombre de base de datos",
@@ -1265,6 +1266,7 @@
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar Asientos",
