--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Kontabilitate idazpenaren goiburuan adierazitako data",
     "day": "Eguna",
     "days": "Egunak",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Egunak epemuga arte",
     "db-host": "Datu basearen zerbitzaria",
     "db-name": "Datu-basearen izena",
@@ -1265,6 +1266,7 @@
     "reloading": "Kargatzen...",
     "remove-filter": "Iragazkia kendu",
     "remove-from-list": "Kendu",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Berritu",
     "renumber": "Berzenbakitu",
     "renumber-accounting": "Idazpenei zenbaki berriak eman",
