--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Date indiquée dans l'en-tête de l'entrée comptable",
     "day": "jour",
     "days": "Jours",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Jours avant l'échéance",
     "db-host": "Base de données du serveur",
     "db-name": "Nom de la base de données",
@@ -1265,6 +1266,7 @@
     "reloading": "Rechargement",
     "remove-filter": "Supprimer le filtre",
     "remove-from-list": "Supprimer",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renouveler",
     "renumber": "Renuméroter",
     "renumber-accounting": "Renuméroter les sièges",
