--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Data indicada na cabeceira do asento contable",
     "day": "día",
     "days": "Días",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Días ata vencememto",
     "db-host": "Base de datos do servidor",
     "db-name": "Nome da base de datos",
@@ -1265,6 +1266,7 @@
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar da lista",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar asentos",
