--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "day",
     "days": "days",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "days-until-expiration",
     "db-host": "Database del server",
     "db-name": "Nome del database",
@@ -1265,6 +1266,7 @@
     "reloading": "reloading",
     "remove-filter": "remove-filter",
     "remove-from-list": "remove-from-list",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "renew",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
