--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "day",
     "days": "dias",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Dias até o vencimento",
     "db-host": "Servidor de banco de dados",
     "db-name": "Nome do banco de dados",
@@ -1265,6 +1266,7 @@
     "reloading": "reloading",
     "remove-filter": "Eliminar filtros",
     "remove-from-list": "remove-from-list",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
