--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Data indicada en la capçalera de l'assentament contable",
     "day": "day",
     "days": "Dies",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Dies fins venciment",
     "db-host": "Servidor de la base de senyes",
     "db-name": "Nom de la base de senyes",
@@ -1265,6 +1266,7 @@
     "reloading": "Recarregant...",
     "remove-filter": "remove-filter",
     "remove-from-list": "Treure",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar els assentaments",
