--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -386,6 +386,7 @@
     "dateentry-wildcard-info": "Data indicada a la capçalera de l'assentament comptable",
     "day": "Dia",
     "days": "Dies",
+    "days-log-retention": "Nº días retención logs",
     "days-until-expiration": "Dies fins venciment",
     "db-host": "Servidor de base de dades",
     "db-name": "Nom de la base de dades",
@@ -1265,6 +1266,7 @@
     "reloading": "Recarregant...",
     "remove-filter": "Eliminar filtre",
     "remove-from-list": "Treure",
+    "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar Assentaments",
