Añadido proceso para actualizar los contadores de archivos adjuntos.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -205,7 +205,7 @@
     "cant-load-controller": "Non se pode cargar o controlador  '%controllerName%'.",
     "cant-modify-reference": "Non se pode editar a referencia.",
     "cant-remove-accounting-entry": "Non se pode eliminar o asento",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Non se pode eliminar unha factura que xa ten rectificativa (devolución)",
     "cant-remove-receipt": "Non se pode eliminar o recibo",
     "cant-update-audit-log": "Non se pode modificar un rexistro de auditoría",
     "card": "Tarxeta",
@@ -1266,7 +1266,7 @@
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar da lista",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Eliminando logs ata o %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar asentos",
