Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1576,6 +1576,7 @@
     "update-time": "Hora d'actualització",
     "updated-model": "Actualitzat %model% (%key%) %desc%",
     "updater": "Actualitzador",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat en",
     "url": "Lloc web",
