--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1576,6 +1576,7 @@
     "update-time": "Update time",
     "updated-model": "Updated %model% (%key%) %desc%",
     "updater": "Updater",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Upload file",
     "uploaded-at": "Uploaded at",
     "url": "Web site",
