--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1576,6 +1576,7 @@
     "update-time": "Eguneratze ordua",
     "updated-model": "%model% (%key%) %desc% Eguneratua",
     "updater": "Eguneratzailea",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
     "url": "Webgunea",
