--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1576,6 +1576,7 @@
     "update-time": "Aktuallierungszeit",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "geladen am",
     "url": "Webseite",
