--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -1576,6 +1576,7 @@
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
     "url": "Dirección web",
