--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1576,6 +1576,7 @@
     "update-time": "Heure de mise à jour",
     "updated-model": "%model% (%key%) %desc% mis à jour",
     "updater": "Processus de mise à jour",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "Téléversé vers",
     "url": "Site Internet",
