--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1576,6 +1576,7 @@
     "update-time": "update-time",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "Uploaded at",
     "url": "Sito web",
