--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1576,6 +1576,7 @@
     "update-time": "Hora de l'actualització",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualitzador",
+    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
     "uploaded-at": "Pujat el",
     "url": "Lloc Web",
